--- a/css/style.css
+++ b/css/style.css
@@ -55,16 +55,20 @@ body{
 }
 .tourism-item{
     width: 307px;
-    height: 200px;
+    /*height: 200px;*/
     margin: auto;
-    border: 3px solid black;
-    border-image: linear-gradient(to top, black, white) 1;
+
 }
 .tourism-item__photo{
     margin: auto;
     width: 307px;
     height: 200px;
+    border: 3px solid black;
+    border-image: linear-gradient(to top, black, white) 1;
     position: relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .pic-fst{
     background-image: url("../img/01.jpg");
@@ -75,7 +79,7 @@ body{
     padding-right: 20px;
     background-color: #f26522;
     width: 307px;
-    height: 63px;
+    height: 0;
     font-size: 14px;
     display: flex;
     justify-content: space-between;
@@ -83,20 +87,35 @@ body{
     position: absolute;
     right: 0;
     bottom: 0;
+    transition: all .2s linear;
+    overflow: hidden;
+}
+.tourism-item:hover .price-slide{
+    height: 63px;
 }
 .price-box{
     text-align: left;
 }
 .price{
-    font-size: 20px;
+    font-size: 18px;
 }
 .from-word{
     font-size: 9px;
     padding-bottom: 3px;
 }
+.details-button{
+    cursor: pointer;
+}
 .details-link{
     text-transform: capitalize;
     margin-right: 15px;
+}
+.tourism-item__name{
+    text-transform: capitalize;
+    margin-top: 15px;
+}
+.tourism-item__name:hover{
+    color: #f26522;
 }
 /*@media (max-width: 600px){*/
 /*    */
