--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,7 @@ body{
 }
 .tourism-item{
     width: 307px;
-    /*height: 200px;*/
-    margin: auto;
-
+    margin: 0 auto 40px;
 }
 .tourism-item__photo{
     margin: auto;
@@ -72,6 +70,21 @@ body{
 }
 .pic-fst{
     background-image: url("../img/01.jpg");
+}
+.pic-snd{
+    background-image: url("../img/02.jpg");
+}
+.pic-trd{
+    background-image: url("../img/03.jpg");
+}
+.pic-frth{
+    background-image: url("../img/04.jpg");
+}
+.pic-ffth{
+    background-image: url("../img/05.jpg");
+}
+.pic-sxth{
+    background-image: url("../img/06.jpg");
 }
 .price-slide{
     box-sizing: border-box;
@@ -116,6 +129,11 @@ body{
 }
 .tourism-item__name:hover{
     color: #f26522;
+}
+.footer{
+    font-size: 12px;
+    height: 50px;
+    margin-top: 40px;
 }
 /*@media (max-width: 600px){*/
 /*    */
